[gd_scene load_steps=6 format=3 uid="uid://game_hud_001"]

[ext_resource type="Script" path="res://scenes/ui/game_hud.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/minimap.gd" id="2"]

[sub_resource type="LabelSettings" id="LabelSettings_topbar"]
font_size = 18
font_color = Color(1, 0.95, 0.8, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_info_title"]
font_size = 16
font_color = Color(1, 0.85, 0.4, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_info"]
font_size = 13
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="GameHUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
offset_left = 10.0
offset_top = 8.0
offset_right = 700.0
offset_bottom = 36.0
theme_override_constants/separation = 30

[node name="LevelLabel" type="Label" parent="TopBar"]
layout_mode = 2
label_settings = SubResource("LabelSettings_topbar")
text = "The Valley"

[node name="GoldLabel" type="Label" parent="TopBar"]
layout_mode = 2
label_settings = SubResource("LabelSettings_topbar")
text = "⛏ 100"

[node name="LivesLabel" type="Label" parent="TopBar"]
layout_mode = 2
label_settings = SubResource("LabelSettings_topbar")
text = "♥ 20"

[node name="WaveLabel" type="Label" parent="TopBar"]
layout_mode = 2
label_settings = SubResource("LabelSettings_topbar")
text = "Wave 0/10"

[node name="MinimapMargin" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 140.0
grow_horizontal = 0

[node name="Minimap" type="Control" parent="MinimapMargin"]
layout_mode = 2
custom_minimum_size = Vector2(200, 120)
script = ExtResource("2")

[node name="BottomPanel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -175.0

[node name="HBox" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TowerMenu" type="PanelContainer" parent="BottomPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="ScrollContainer" type="ScrollContainer" parent="BottomPanel/HBox/TowerMenu"]
layout_mode = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="TowerGrid" type="GridContainer" parent="BottomPanel/HBox/TowerMenu/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 7

[node name="InfoPanel" type="VBoxContainer" parent="BottomPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="BottomPanel/HBox/InfoPanel"]
layout_mode = 2
label_settings = SubResource("LabelSettings_info_title")
text = "Tower Defense"
horizontal_alignment = 1

[node name="Stats" type="Label" parent="BottomPanel/HBox/InfoPanel"]
layout_mode = 2
label_settings = SubResource("LabelSettings_info")
text = "Select a tower to build"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="BottomPanel/HBox/InfoPanel"]
layout_mode = 2
label_settings = SubResource("LabelSettings_info")
text = "or click a placed tower to upgrade"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpgradeScroll" type="ScrollContainer" parent="BottomPanel/HBox/InfoPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Upgrades" type="VBoxContainer" parent="BottomPanel/HBox/InfoPanel/UpgradeScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="Controls" type="VBoxContainer" parent="BottomPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0
alignment = 1
theme_override_constants/separation = 6

[node name="StartWaveBtn" type="Button" parent="BottomPanel/HBox/Controls"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)
text = "Start Wave"

[node name="SpaceHint" type="Label" parent="BottomPanel/HBox/Controls"]
layout_mode = 2
label_settings = SubResource("LabelSettings_info")
text = "[Space]"
horizontal_alignment = 1

[node name="EscMenu" type="PanelContainer" parent="."]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0

[node name="VBox" type="VBoxContainer" parent="EscMenu"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 12

[node name="MenuTitle" type="Label" parent="EscMenu/VBox"]
layout_mode = 2
label_settings = SubResource("LabelSettings_info_title")
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="EscMenu/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
text = "Resume"

[node name="RestartBtn" type="Button" parent="EscMenu/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
text = "Restart Level"

[node name="SettingsBtn" type="Button" parent="EscMenu/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
text = "Settings"

[node name="MainMenuBtn" type="Button" parent="EscMenu/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 40)
text = "Main Menu"
